src/components/Header/Header.scss
@import '/src/styles/var';
@import '/src/styles/mixins';

.header-main {
  @include flex(row, center, center);
  position: fixed;
  z-index: 1000;
  width: 100%;
  height: $header-height;
  background: white;
  padding: 1rem;
  box-shadow: $box-shadow-big;

  // only logo in header
  .logo-container {
    height: 80%;
  }
}

